--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,17 @@ aiohttp==3.9.1
 selenium==4.15.2
 
 # Computer Vision & Image Processing
-opencv-python==4.8.1.78
-Pillow==10.1.0
-imagehash==4.3.1
+opencv-python>=4.12.0
+Pillow>=12.0.0
+imagehash>=4.3.2
 scikit-image==0.22.0
+scikit-learn>=1.7.2
 
 # Machine Learning & Embeddings
-sentence-transformers==2.2.2
-torch==2.1.1
-torchvision==0.16.1
-numpy==1.26.2
+transformers>=4.57.1
+torch>=2.9.1
+torchvision>=0.24.1
+numpy>=2.2.6
 
 # OCR
 pytesseract==0.3.10
@@ -53,6 +54,8 @@ pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
 faker==20.1.0
+pytest-playwright==0.4.3
+playwright==1.40.0
 
 # Code Quality
 black==23.12.0
